--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: htkc_utils
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/ChandraHemant/htkc_utils
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
