--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=F:\FlutterSdk\flutter
-FLUTTER_APPLICATION_PATH=F:\GithubDesktop\flutter_packages\htkc_utils
+FLUTTER_APPLICATION_PATH=F:\GithubDesktop\htkc_utils
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=0.0.1
