--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: htkc_utils
-description: A new Flutter package project.
+description: HTKC Utils Package is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project. It aims to simplify common tasks and enhance productivity by encapsulating frequently used functionalities into a single package.
 version: 1.0.0
 homepage: https://github.com/ChandraHemant/htkc_utils
 
