--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: htkc_utils
-description: HTKC Utils Package is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project. It aims to simplify common tasks and enhance productivity by encapsulating frequently used functionalities into a single package.
-version: 1.0.0
+description: HTKC Utils is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project.
+version: 1.0.3
 homepage: https://github.com/ChandraHemant/htkc_utils
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=2.14.0 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
@@ -14,13 +14,14 @@ dependencies:
   http: ^0.13.4
   intl: ^0.17.0
   flutter_neumorphic: ^3.0.3
-  permission_handler: ^10.1.0
+  nb_utils: ^4.4.12
+  permission_handler: ^9.0.2
   path_provider: ^2.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^1.0.0
 
 
 flutter:
