--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: htkc_utils
 description: HTKC Utils is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project.
-version: 1.0.3
+version: 1.0.4
 homepage: https://github.com/ChandraHemant/htkc_utils
 
 environment:
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cached_network_image: ^3.1.0
   http: ^0.13.4
   intl: ^0.17.0
   flutter_neumorphic: ^3.0.3
@@ -28,4 +29,5 @@ flutter:
 
   assets:
     - assets/
+    - assets/app/
     - assets/icons/
