--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\Administrator\\AppData\\Local\\Android\\sdk
-flutter.sdk=F:\\FlutterSdk\\flutter
+sdk.dir=C:\\Users\\heman\\AppData\\Local\\Android\\sdk
+flutter.sdk=D:\\src\\flutter
