--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: htkc_utils
 description: HTKC Utils is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project.
-version: 1.2.2
+version: 1.2.5
 homepage: https://github.com/ChandraHemant/htkc_utils
 
 environment:
@@ -13,6 +13,7 @@ dependencies:
 
   cached_network_image: ^3.2.3
   intl: ^0.18.1
+  get: ^4.6.5
   http: ^1.0.0
   nb_utils: ^4.4.12
   path_provider: ^2.0.15
