--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: htkc_utils
 description: HTKC Utils is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project.
-version: 1.3.5
+version: 1.4.0
 homepage: https://github.com/ChandraHemant/htkc_utils
 
 environment:
@@ -20,6 +20,7 @@ dependencies:
   http: ^1.0.0
   path_provider: ^2.0.15
   permission_handler: ^10.4.2
+  path_drawing: ^1.0.1
 
 
 dev_dependencies:
