--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,6 +24,16 @@ dependencies:
     path: ../
 
   flutter_colorpicker: ^0.4.0
+  image_picker: ^1.0.1
+
+  flutter_chat_types: ^3.6.2
+  http: '>=0.13.6 <2.0.0'
+  file_picker: ^5.3.2
+  intl: ^0.18.1
+  mime: ^1.0.4
+  open_filex: ^4.3.2
+  path_provider: ^2.0.15
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
