--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: htkc_utils
 description: HTKC Utils is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project.
-version: 1.4.5
+version: 1.4.6
 homepage: https://github.com/ChandraHemant/htkc_utils
 
 environment:
@@ -22,6 +22,16 @@ dependencies:
   permission_handler: ^10.4.2
   path_drawing: ^1.0.1
 
+  diffutil_dart: ^3.0.0
+  equatable: ^2.0.5
+  flutter_chat_types: ^3.6.2
+  flutter_link_previewer: ^3.2.2
+  flutter_parsed_text: ^2.2.1
+  meta: '>=1.8.0 <2.0.0'
+  photo_view: ^0.14.0
+  scroll_to_index: ^3.0.1
+  url_launcher: ^6.1.12
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
