--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: htkc_utils
 description: HTKC Utils is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project.
-version: 1.4.6
+version: 1.4.7
 homepage: https://github.com/ChandraHemant/htkc_utils
 
 environment:
@@ -41,6 +41,28 @@ dev_dependencies:
 flutter:
 
   assets:
+    - packages/htkc_utils/assets/icon-arrow.png
+    - packages/htkc_utils/assets/icon-attachment.png
+    - packages/htkc_utils/assets/icon-delivered.png
+    - packages/htkc_utils/assets/icon-document.png
+    - packages/htkc_utils/assets/icon-error.png
+    - packages/htkc_utils/assets/icon-seen.png
+    - packages/htkc_utils/assets/icon-send.png
+    - packages/htkc_utils/assets/2.0x/icon-arrow.png
+    - packages/htkc_utils/assets/2.0x/icon-attachment.png
+    - packages/htkc_utils/assets/2.0x/icon-delivered.png
+    - packages/htkc_utils/assets/2.0x/icon-document.png
+    - packages/htkc_utils/assets/2.0x/icon-error.png
+    - packages/htkc_utils/assets/2.0x/icon-seen.png
+    - packages/htkc_utils/assets/2.0x/icon-send.png
+    - packages/htkc_utils/assets/3.0x/icon-arrow.png
+    - packages/htkc_utils/assets/3.0x/icon-attachment.png
+    - packages/htkc_utils/assets/3.0x/icon-delivered.png
+    - packages/htkc_utils/assets/3.0x/icon-document.png
+    - packages/htkc_utils/assets/3.0x/icon-error.png
+    - packages/htkc_utils/assets/3.0x/icon-seen.png
+    - packages/htkc_utils/assets/3.0x/icon-send.png
+
     - assets/
     - assets/app/
     - assets/icons/
