--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
 
   flutter_colorpicker: ^0.4.0
   image_picker: ^1.0.1
+  flutter_localization: ^0.2.0
+  go_router: ^13.0.1
 
   flutter_chat_types: ^3.6.2
   http: '>=0.13.6 <2.0.0'
