--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: htkc_utils
 description: HTKC Utils is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project.
-version: 1.5.1
+version: 1.5.2
 homepage: https://github.com/ChandraHemant/htkc_utils
 
 environment:
@@ -36,10 +36,29 @@ dependencies:
   url_launcher: ^6.1.12
   visibility_detector: ^0.4.0+2
 
+  # From fluttercommunity.dev: Get current device information from within the Flutter application.
+  device_info_plus: '>=8.1.0 <10.0.0'
+
+  # From dart.dev: Platform independent access to information about the current operating system.
+  os_detect: ^2.0.1
+
+  # From Flutter Team: Wraps NSUserDefaults (on iOS) and SharedPreferences (on Android).
+  shared_preferences: '>=2.1.1 <3.0.0'
+
+  # A dart library for comparing and incrementing version numbers with Semantic Versioning.
+  version: ^3.0.2
+
+  # A dart library for parsing, traversing, querying, transforming and building XML documents.
+  xml: ^6.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+
+  # From Dart Team: Mock library for Dart inspired by Mockito.
+  mockito: ^5.4.3
+  flutter_lints: ^2.0.3
+  go_router: ^7.1.1
 
 flutter:
 
