--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,24 +23,20 @@ dependencies:
   htkc_utils:
     path: ../
 
-  flutter_colorpicker: ^0.4.0
+  flutter_colorpicker: ^1.0.3
   image_picker: ^1.0.1
-  flutter_localization: ^0.2.0
   go_router: ^13.0.1
 
   flutter_chat_types: ^3.6.2
-  http: '>=0.13.6 <2.0.0'
-  file_picker: ^5.3.2
-  intl: ^0.18.1
+  http: ^1.2.0
+  file_picker: ^6.1.1
+  intl: ^0.19.0
   mime: ^1.0.4
   open_filex: ^4.3.2
   path_provider: ^2.0.15
-  uuid: ^3.0.7
+  uuid: ^4.3.3
   dio: ^5.4.0
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
