--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,11 +1,11 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=D:\src\flutter
-FLUTTER_APPLICATION_PATH=D:\GithubDesktop\htkc_utils
+FLUTTER_ROOT=F:\FlutterSdk\flutter_latest
+FLUTTER_APPLICATION_PATH=E:\GithubDesktop\htkc_utils
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
-FLUTTER_BUILD_NAME=1.5.5
-FLUTTER_BUILD_NUMBER=1.5.5
+FLUTTER_BUILD_NAME=1.5.6
+FLUTTER_BUILD_NUMBER=1.5.6
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
 EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
 DART_OBFUSCATION=false
