--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,10 +1,10 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=D:\src\flutter
-FLUTTER_APPLICATION_PATH=D:\GithubDesktop\htkc_utils
+FLUTTER_ROOT=F:\FlutterSdk\flutter_latest
+FLUTTER_APPLICATION_PATH=E:\GithubDesktop\htkc_utils
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
-FLUTTER_BUILD_NAME=1.5.5
-FLUTTER_BUILD_NUMBER=1.5.5
+FLUTTER_BUILD_NAME=1.5.6
+FLUTTER_BUILD_NUMBER=1.5.6
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
