--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: htkc_utils
 description: HTKC Utils is a reusable Flutter package that provides a collection of utility functions, classes, and widgets that can be used in any Flutter project.
-version: 1.5.6
+version: 1.5.7
 homepage: https://github.com/ChandraHemant/htkc_utils
 
 environment:
@@ -14,36 +14,36 @@ dependencies:
   cross_file: ^0.3.3+4
   cached_network_image: ^3.2.3
   image_compression: ^1.0.4
-  intl: ^0.18.1
+  intl: ^0.19.0
   get: ^4.6.5
-  http: ^1.0.0
+  http: ^1.2.0
   path_provider: ^2.0.15
-  permission_handler: ^10.4.2
+  permission_handler: ^11.3.0
   path_drawing: ^1.0.1
 
-  package_info_plus: ^4.2.0
+  package_info_plus: ^5.0.1
   collection: ^1.17.2
   html: ^0.15.4
 
-  diffutil_dart: ^3.0.0
+  diffutil_dart: ^4.0.1
   equatable: ^2.0.5
   flutter_chat_types: ^3.6.2
   flutter_link_previewer: ^3.2.2
   flutter_parsed_text: ^2.2.1
-  meta: '>=1.8.0 <2.0.0'
+  meta: ^1.11.0
   photo_view: ^0.14.0
   scroll_to_index: ^3.0.1
   url_launcher: ^6.1.12
   visibility_detector: ^0.4.0+2
 
   # From fluttercommunity.dev: Get current device information from within the Flutter application.
-  device_info_plus: '>=8.1.0 <10.0.0'
+  device_info_plus: ^9.1.2
 
   # From dart.dev: Platform independent access to information about the current operating system.
   os_detect: ^2.0.1
 
   # From Flutter Team: Wraps NSUserDefaults (on iOS) and SharedPreferences (on Android).
-  shared_preferences: '>=2.1.1 <3.0.0'
+  shared_preferences: ^2.2.2
 
   # A dart library for comparing and incrementing version numbers with Semantic Versioning.
   version: ^3.0.2
@@ -52,13 +52,11 @@ dependencies:
   xml: ^6.3.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # From Dart Team: Mock library for Dart inspired by Mockito.
   mockito: ^5.4.3
-  flutter_lints: ^2.0.3
-  go_router: ^7.1.1
+  flutter_lints: ^3.0.1
+  go_router: ^13.2.0
 
 flutter:
 
